fix build log spacing

--- a/BlazarUI/app/stylus/components/build-log.styl
+++ b/BlazarUI/app/stylus/components/build-log.styl
@@ -3,7 +3,7 @@
 .build-log
   position absolute
   z-index 1
-  top 100px
+  top 80px
   left 0
   bottom 0
   right 0
